<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Gleb Godonoga.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_my_authors"
            android:checked="true"
            android:icon="@drawable/ic_drawer_my_authors"
            android:title="@string/navdrawer_item_my_authors"/>
        <item
            android:id="@+id/navigation_item_new_pubs"
            android:icon="@drawable/ic_drawer_new_pubs"
            android:title="@string/navdrawer_item_new_pubs"/>
        <item
            android:id="@+id/navigation_item_export"
            android:icon="@drawable/ic_drawer_export"
            android:title="@string/navdrawer_item_export"/>
        <item
            android:id="@+id/navigation_item_import"
            android:icon="@drawable/ic_drawer_import"
            android:title="@string/navdrawer_item_import"/>

    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/navigation_item_settings"
                android:icon="@drawable/ic_drawer_settings"
                android:title="@string/navdrawer_item_settings"/>
            <item
                android:id="@+id/navigation_item_about"
                android:icon="@drawable/ic_drawer_info"
                android:title="@string/action_about"/>
        </menu>
    </item>

</menu>
