<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2014 Gleb Godonoga.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_vertical_margin"
             android:background="#00000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/crouton_background"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/importResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_import_success_crouton_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/importDivider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/importResultTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FFDDDDDD"/>

        <TextView
            android:id="@+id/totalAuthorsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_import_total_crouton_message"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_below="@+id/importDivider"
            />

        <TextView
            android:id="@+id/successAuthorsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_import_processed_crouton_message"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_below="@+id/totalAuthorsText"
            />

        <TextView
            android:id="@+id/failedAuthorsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_import_failed_crouton_message"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_below="@+id/successAuthorsText"
            />
    </RelativeLayout>
</FrameLayout>
